tests/negative/test-fail-call2.std
Fatal error: exception Failure("type_err:Argument type mismatch in function call")
